# marketing-ai-agent

./: .gitignore  README.md  cli.py  knowledge-management-ui.md  marketing-agent-deploy-railway.md  marketing-agent-enhanced-review-prompt.md  marketing-agent-implementation-prompt.md  marketing-agent-react-fastapi-prompt (1).md  marketing-agent-web-ui-prompt.md  multi-brand-knowledge.md  nixpacks.toml  pyproject.toml  railway.toml  remove_bg.py  requirements.txt  test_nodes.py  upgrade-chatbot.md  web.py
.streamlit/: config.toml
api/: __init__.py  main.py  pipeline_runner.py  schemas.py
api/routes/: brands.py  campaign.py  templates.py
datasets/failures/: .gitkeep
datasets/golden/: .gitkeep
knowledge_base/_global/policies/: content_policy.md
knowledge_base/audience/: _template.md
knowledge_base/brand/: brand_identity.md  visual_guidelines.md
knowledge_base/policies/: content_policy.md
scripts/: migrate_knowledge.py
src/: __init__.py
src/config/: __init__.py  models.yaml  platforms.yaml  settings.py
src/graph/: __init__.py  edges.py  state.py  workflow.py
src/knowledge/: __init__.py  brand_manager.py  loader.py  retriever.py  voice_analyzer.py
src/models/: __init__.py  brief.py  content.py  message.py  review.py  trace.py
src/nodes/: __init__.py  brief_parser.py  channel_renderer.py  context_builder.py  formatter.py  message_architect.py  reviewer.py  strategist.py
src/utils/: __init__.py  callbacks.py  trace.py
src/web/: pipeline.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/api/: client.js
(+24 files in other folders)
