[project]
name = "marketing-agent"
version = "0.1.0"
description = "Marketing Agent Workflow Engine — multi-step pipeline for social media campaign content generation"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "langchain-chroma>=0.2",
]
eval = [
    "pandas>=2.0",
]
ui = [
    "streamlit>=1.35",
]

[project.scripts]
marketing-agent = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
